--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aniso8601==0.92
+decorator==3.4.0
 Flask==0.10.1
 Flask-Bcrypt==0.6.0
 Flask-HTTPAuth==2.2.1
@@ -9,6 +11,7 @@ intervals==0.3.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+nose2==0.5.0
 py-bcrypt==0.4
 pytz==2014.10
 six==1.9.0
