--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,7 @@
     "restangular": "~1.4.0",
     "angularjs": "~1.2.21",
     "angular-local-storage": "~0.0.7",
-    "bootstrap-sass-official": "~3.3.3"
+    "bootstrap-sass-official": "~3.3.3",
+    "angular-ui-router": "~0.2.13"
   }
 }
