--- a/client/bower.json
+++ b/client/bower.json
@@ -14,9 +14,9 @@
   ],
   "dependencies": {
     "restangular": "~1.4.0",
-    "angularjs": "~1.2.21",
     "angular-local-storage": "~0.0.7",
     "bootstrap-sass-official": "~3.3.3",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular": "~1.3.12"
   }
 }
