--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "browser-sync": "^2.0.0-rc5",
     "gulp": "^3.8.10",
     "gulp-jasmine": "^2.0.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-sass": "^1.3.2",
     "jasmine-core": "^2.2.0",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
