--- a/client/bower.json
+++ b/client/bower.json
@@ -18,5 +18,8 @@
     "bootstrap-sass-official": "~3.3.3",
     "angular-ui-router": "~0.2.13",
     "angular": "~1.3.12"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.13"
   }
 }
