--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,10 @@
     "Michael Abrahamsen <mail@michaelabrahamsen.com>"
   ],
   "devDependencies": {
-    "browser-sync": "^2.0.0-rc5",
-    "gulp": "^3.8.10",
+    "browser-sync": "^2.1.1",
+    "gulp": "^3.8.11",
     "gulp-jshint": "^1.9.2",
-    "gulp-sass": "^1.3.2",
+    "gulp-sass": "^1.3.3",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
