--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "karma": "^0.12.31",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^0.1.4",
     "node-notifier": "^4.1.0"
