--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^0.1.4",
-    "node-notifier": "^4.1.0"
+    "node-notifier": "^4.1.0",
+    "stream-combiner2": "^1.0.2"
   }
 }
