--- a/client/bower.json
+++ b/client/bower.json
@@ -17,9 +17,14 @@
     "angular-local-storage": "~0.0.7",
     "bootstrap-sass-official": "~3.3.3",
     "angular-ui-router": "~0.2.13",
-    "angular": "~1.3.12"
+    "angular": "~1.3.14",
+    "angular-ui-select": "~0.10.0",
+    "angular-sanitize": "~1.3.14"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.13"
+    "angular-mocks": "~1.3.14"
+  },
+  "resolutions": {
+    "angular": "~1.3.14"
   }
 }
