--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,15 +1,20 @@
+alembic==0.7.4
 aniso8601==0.92
 decorator==3.4.0
 Flask==0.10.1
 Flask-Bcrypt==0.6.0
 Flask-HTTPAuth==2.3.0
+Flask-Migrate==1.3.0
 Flask-RESTful==0.3.1
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+Flask-Testing==0.4.2
 Flask-WTF==0.11
 infinity==1.3
 intervals==0.3.1
 itsdangerous==0.24
 Jinja2==2.7.3
+Mako==1.0.1
 MarkupSafe==0.23
 nose2==0.5.0
 py-bcrypt==0.4
