--- a/client/bower.json
+++ b/client/bower.json
@@ -17,14 +17,15 @@
     "angular-local-storage": "~0.0.7",
     "bootstrap-sass-official": "~3.3.3",
     "angular-ui-router": "~0.2.13",
-    "angular": "~1.3.14",
+    "angular": "~1.3.15",
     "angular-ui-select": "~0.10.0",
-    "angular-sanitize": "~1.3.14"
+    "angular-sanitize": "~1.3.14",
+    "angular-bootstrap": "~0.12.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.14"
+    "angular-mocks": "~1.3.15"
   },
   "resolutions": {
-    "angular": "~1.3.14"
+    "angular": "~1.3.15"
   }
 }
